<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:fitnessapp="http://schemas.android.com/apk/res-auto" >
     
    <item android:id="@+id/action_my_reservations"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/app_my_reservations_title"
          fitnessapp:showAsAction="never" />
    
    <item android:id="@+id/action_change_password"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/app_change_password_title"
          fitnessapp:showAsAction="never" />
    
    <item android:id="@+id/action_setting" 
          android:icon="@drawable/ic_action_settings"
		  android:title="@string/app_menu_settings"
		  fitnessapp:showAsAction="never" />
    
    <item android:id="@+id/action_logout"
          android:icon="@drawable/ic_action_directions"
          android:title="@string/app_logout_title"
          fitnessapp:showAsAction="never" />
    
</menu>
